fixed collapsed box shadow on left panel

--- a/web/src/styles.css
+++ b/web/src/styles.css
@@ -260,9 +260,9 @@ body {
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
     justify-content: center;
-    box-shadow: 4px 2px 4px 0 rgba(0,0,0,0.15);
-    -webkit-box-shadow: 4px 2px 4px 0 rgba(0,0,0,0.15);
-    -moz-box-shadow: 4px 2px 4px 0 rgba(0,0,0,0.15);
+    box-shadow: 6px 2px 10px -3px rgba(0,0,0,0.10);
+    -webkit-box-shadow: 6px 2px 10px -3px rgba(0,0,0,0.10);
+    -moz-box-shadow: 6px 2px 10px -3px rgba(0,0,0,0.10);
     transition: transform 0.4s;
     z-index: 2; /* in order to be above left-panel */
 }
@@ -299,11 +299,15 @@ body {
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
-    transition: transform 0.4s;
+    transition: transform 0.4s, box-shadow 0.4s;
+
 }
 
 .left-panel.collapsed {
     transform: translate(-24rem);
+    box-shadow: 0 24px 15px rgba(0,0,0,0);
+    -webkit-box-shadow: 0 24px 15px rgba(0,0,0,0);
+    -moz-box-shadow: 0 24px 15px rgba(0,0,0,0);
 }
 
 .left-panel h1 {
